@@ -5,7 +5,7 @@
 rm ./tronbot
 
 #export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O3"
-#export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O0 -ggdb"
+export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O0 -ggdb"
 
 echo "Kompiliere tronbot…"
 make -j1 || exit
