@@ -1,3 +1,6 @@
+2015-01-26
+	- Unterstützung von einem anderen Programm
+
 2014-12-19
 	- Korrektur zur Unterstützung vom gcc < 4.9
 
